--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,120 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&family=Montserrat&family=Poppins&family=Readex+Pro:wght@200;300;400;500;600;700&display=swap');
+
+html {
+    margin: 0;
+    padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+    font-family: "Readex Pro", sans-serif;
+}
+
+body {
+    text-align: center;
+    margin: 0;
+}
+
+/* btns */
+
+.primary-button {
+    padding: 12px 30px;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 15px;
+    background: teal;
+    transition-property: background;
+    transition-duration: .5s;
+    transition-timing-function: linear;
+    border-radius: 25px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+
+.primary-button:hover {
+    background: green;
+}
+
+
+/* navbar */
+.nav {
+    width: 98%;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo-container {
+    height: 50px;
+    margin: 15px;
+
+}
+
+.logo {
+    width: 100%;
+}
+
+.nav-button {
+    width: 100px;
+    height: 50px;
+    padding: 10px 20px;
+    opacity: 1;
+    transition: .3s;
+    cursor: pointer;
+    color: white;
+    background-color: salmon;
+    border: none;
+    border-radius: 10px;
+    font-size: 20px;
+}
+
+.nav-button:hover {
+    transition: .3s;
+    opacity: .6;
+    color: #111;
+}
+.nav-button:disabled {
+    background-color: gray;
+}
+.nav-button:disabled:hover{
+    background-color: gray;
+    opacity: 1;
+    color: white;
+}
+
+
+/* home page */
+.overlay {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background: linear-gradient(45deg, teal, orange)
+}
+.home {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+/* auth modal */
+.auth-modal {
+    position: absolute;
+    top: 175px;
+    margin-left: auto;
+    margin-right: auto;
+    min-width: 360px;
+    height: 600px;
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 40px;
+}
+
+.close-btn {
+    cursor: pointer;
+    position: absolute;
+    right: 10px;
+    top: 5px;
+    color: #111;
 }
