--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&family=Montserrat&family=Poppins&family=Readex+Pro:wght@200;300;400;500;600;700&display=swap');
-
+/* default */
 html {
     margin: 0;
     padding: 0;
@@ -12,6 +12,17 @@ html {
 body {
     text-align: center;
     margin: 0;
+}
+
+
+/* titles */
+h2 {
+    font-style: italic;
+}
+
+.primary-title {
+    font-size: 90px;
+    color: #fff;
 }
 
 /* btns */
@@ -74,10 +85,12 @@ body {
     opacity: .6;
     color: #111;
 }
+
 .nav-button:disabled {
     background-color: gray;
 }
-.nav-button:disabled:hover{
+
+.nav-button:disabled:hover {
     background-color: gray;
     opacity: 1;
     color: white;
@@ -89,9 +102,11 @@ body {
     width: 100%;
     height: 100%;
     position: fixed;
-    background: linear-gradient(45deg, teal, orange)
+    background: linear-gradient(to bottom, orange, teal)
 }
+
 .home {
+    margin-top: 20vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -101,10 +116,12 @@ body {
 /* auth modal */
 .auth-modal {
     position: absolute;
-    top: 175px;
+    left: 0;
+    right: 9px;
+    top: 100px;
     margin-left: auto;
     margin-right: auto;
-    min-width: 360px;
+    max-width: 360px;
     height: 600px;
     background-color: #fff;
     border-radius: 10px;
@@ -117,4 +134,46 @@ body {
     right: 10px;
     top: 5px;
     color: #111;
+}
+
+.auth-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.auth-input {
+    width: 80%;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    outline: none;
+    font-size: 17px;
+    padding: 8px;
+    margin: 8px;
+    border: 2px solid rgba(0, 0, 0, .3)
+}
+.auth-input:focus {
+    border: 2px solid teal;
+}
+
+.submit-input {
+    cursor: pointer;
+    background-color: teal;
+    color: white;
+    font-weight: 500;
+    font-size: 15px;
+    text-transform: uppercase;
+    padding: 12px 30px;
+    border-radius: 30px;
+    border: 2px solid black;
+    margin: 6px;
+}
+
+.submit-input:hover {
+    background-color: green;
+    border: 2px solid gray;
+    transition-property: background, border;
+    transition-duration: .5s;
+    transition-timing-function: linear;
 }
