--- a/front/src/index.css
+++ b/front/src/index.css
@@ -305,7 +305,7 @@ h2 {
 .dashboard {
 	display: flex;
 	justify-content: space-between;
-	align-items: center;
+	align-items: flex-start;
 }
 
 .dashboard .swiper-container {
@@ -391,10 +391,16 @@ h2 {
 }
 
 /* chat display */
-.chat-display {
+.chat-display, .matches-display {
 	padding: 20px;
-	height: 60vh;
+	height: 42vh;
 	overflow-y: auto;
+}
+
+.match-card {
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
 }
 
 .chat-input {
@@ -402,4 +408,12 @@ h2 {
 	display: flex;
 	flex-direction: column;
 }
+
+.chat-message-header {
+	display: flex;
+	font-weight: bold;
+}
+
+
+
 
